add build for native by gradle jpackageAppImage. GraalVM JDK is required.